# stock-crawling

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  SKILLS.md  claude_review.md  main.py  main_analyze.py  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml
docs/: pandas_futurewarning_rsi.md
stock_analyzer/: README.md  __init__.py  cli.py  data.py  indicators.py  scanner.py  strategies.py
stock_analyzer/signals/: __init__.py  indicators.py  strategies.py
stock_crawler/: README.md  __init__.py  __main__.py  cli.py  collector.py  config.py  fetcher.py  scheduler.py  storage.py  throttle.py  tickers.py
stock_crawler/pipeline/: __init__.py  collector.py  scheduler.py  throttle.py
stock_crawler/sources/: __init__.py  fetcher.py  tickers.py
tests/: conftest.py  test_config.py  test_data.py  test_fetcher.py  test_indicators.py  test_scanner.py  test_storage.py  test_strategies.py  test_throttle.py  test_tickers.py
tests/stock_analyzer/: test_data.py  test_strategies.py
tests/stock_crawler/: test_fetcher.py  test_throttle.py
