[project]
name = "stock-crawling"
version = "0.1.0"
description = "Daily OHLCV crawler for KOSPI and NASDAQ TOP-N stocks (free sources)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "apscheduler>=3.10.4",
    "typer>=0.12.0",
    "tqdm>=4.66.0",
]
