[project]
name = "stock-crawling"
version = "0.1.0"
description = "Daily OHLCV crawler for KOSPI and NASDAQ TOP-N stocks (free sources)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "apscheduler>=3.10.4",
    "typer>=0.12.0",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "bandit[toml]>=1.8.0",
    "ruff>=0.9.0",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "BLE", # flake8-blind-except
]
ignore = [
    "B008", # typer.Option() in function defaults — Typer's intended pattern
]

[tool.ruff.lint.isort]
known-first-party = ["stock_crawler"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Bandit
# ---------------------------------------------------------------------------
[tool.bandit]
targets = ["stock_crawler"]
skips = []
