[project]
name = "stock-crawling"
version = "0.1.0"
description = "Daily OHLCV crawler for KOSPI and NASDAQ TOP-N stocks (free sources)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "apscheduler>=3.10.4",
    "typer>=0.12.0",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "BLE", # flake8-blind-except
    "S",   # flake8-bandit (security)
]
ignore = [
    "B008", # typer.Option() in function defaults — Typer's intended pattern
]

[tool.ruff.lint.isort]
known-first-party = ["stock_crawler", "stock_analyzer"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"] # pytest 테스트는 assert 사용이 정상

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
